crates/csl/src/style/snapshots/csl__style__info__test__info_serialize.snap
---
source: crates/csl/src/style/info.rs
expression: info
---
{
  "id": "https://example.com/mystyle",
  "updated": "2020-01-01T00:00:00+00:00",
  "title": {
    "content": "My CSL Style",
    "lang": null
  },
  "titleShort": null,
  "rights": null,
  "summary": null,
  "parent": null,
  "links": [],
  "citationFormat": null,
  "categories": [],
  "issn": null,
  "eissn": null,
  "issnl": null
}
