crates/csl/src/style/snapshots/csl__style__info__test__link-2.snap
---
source: crates/csl/src/style/info.rs
expression: "crate::from_node::parse_as::<Link>(::indoc::indoc!(r#\"<link rel=\"documentation\" href=\"literally any string here\" />\"#)).expect(\"did not parse\")"
---
Link {
    href: Identifier(
        "literally any string here",
    ),
    rel: Documentation,
    lang: None,
}
